<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2016 Saiy™ Ltd
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:focusableInTouchMode="true"
                                             android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerTTS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:entries="@array/array_tts_providers"
        android:prompt="@string/tts_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <Spinner
        android:id="@+id/spinnerVR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/array_vr_providers"
        android:prompt="@string/vr_prompt"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerTTS"
        app:layout_constraintRight_toRightOf="@+id/spinnerTTS"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTTS"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <Spinner
        android:id="@+id/spinnerNLU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/array_nlu_providers"
        android:prompt="@string/nlu_prompt"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerVR"
        app:layout_constraintRight_toRightOf="@+id/spinnerVR"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVR"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>


    <EditText
        android:id="@+id/etSpeech"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_et"
        android:imeActionId="@integer/ime_go"
        android:imeActionLabel="@string/run"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:lines="1"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:textColorHint="@color/colorFade"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingRight="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNLU"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>


    <ImageButton
        android:id="@+id/ibRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ac_button_done"
        android:elevation="4dp"
        android:minHeight="?android:attr/listPreferredItemHeight"
        app:layout_constraintBottom_toBottomOf="@+id/etSpeech"
        app:layout_constraintRight_toRightOf="@+id/etSpeech"
        app:layout_constraintTop_toTopOf="@+id/etSpeech"
        app:srcCompat="@android:drawable/ic_media_play"/>


    <TextView
        android:id="@+id/tvResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        android:ellipsize="end"
        android:gravity="top"
        android:minHeight="100dp"
        android:paddingEnd="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        tools:text="Testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSpeech"/>

</android.support.constraint.ConstraintLayout>